@startuml github.weichware10.util.db
title github.weichware10.util.db

package github.weichware10.util.db {

    ' -=- classes (github.weichware10.util.db) -=-
    class github.weichware10.util.db.Configurations {
        ' --- values (github.weichware10.util.db.Configurations) ---

        ' --- fields (github.weichware10.util.db.Configurations) ---
        - DataBaseClient dataBaseClient

        ' --- methods (github.weichware10.util.db.Configurations) ---
        #  Configurations(DataBaseClient dataBaseClient)
        + Configuration get(String configId)
        + String set(Configuration configuration)
        + boolean getAvailability(String configId)
    }

    class github.weichware10.util.db.DataBaseClient {
        ' --- values (github.weichware10.util.db.DataBaseClient) ---

        ' --- fields (github.weichware10.util.db.DataBaseClient) ---
        # String url
        # Properties props
        # String schema
        + Configurations configurations
        + Trials trials
        + Datapoints datapoints
        + Strings strings
        + Permissions permissions

        ' --- methods (github.weichware10.util.db.DataBaseClient) ---
        +  DataBaseClient(String url, String user, String password, String schema)
        - boolean tableExists(String table)
    }

    class github.weichware10.util.db.Datapoints {
        ' --- values (github.weichware10.util.db.Datapoints) ---

        ' --- fields (github.weichware10.util.db.Datapoints) ---
        - DataBaseClient dataBaseClient

        ' --- methods (github.weichware10.util.db.Datapoints) ---
        #  Datapoints(DataBaseClient dataBaseClient)
        + List<DataPoint> get(String trialId)
        + void set(List<DataPoint> dataPoints, String trialId)
    }

    enum github.weichware10.util.db.Permission {
        ' --- values (github.weichware10.util.db.Permission) ---
         SELECT,  UPDATE,  INSERT,  DELETE

    }

    class github.weichware10.util.db.Permissions {
        ' --- values (github.weichware10.util.db.Permissions) ---

        ' --- fields (github.weichware10.util.db.Permissions) ---
        {static}+ Permission SELECT
        {static}+ Permission UPDATE
        {static}+ Permission INSERT
        {static}+ Permission DELETE
        + Set<Permission> configurations
        + Set<Permission> trials
        + Set<Permission> datapoints
        + Set<Permission> strings
        + boolean isSubject
        + boolean isSpectator
        + boolean isAuthor
        + boolean isAdmin
        - DataBaseClient dataBaseClient

        ' --- methods (github.weichware10.util.db.Permissions) ---
        +  Permissions(DataBaseClient dataBaseClient)
        - Set<Permission> getPermissions(String table)
        + boolean satisfies(Collection<Permission> configurationsPermissions, Collection<Permission> trialsPermissions, Collection<Permission> datapointsPermissions, Collection<Permission> stringsPermissions)
        - boolean permissionsSatisfies(Collection<Permission> desired, Collection<Permission> actual)
        - boolean satisfiesAdmin()
        - boolean satisfiesAuthor()
        - boolean satisfiesSpectator()
        - boolean satisfiesSubject()
    }

    class github.weichware10.util.db.Strings {
        ' --- values (github.weichware10.util.db.Strings) ---

        ' --- fields (github.weichware10.util.db.Strings) ---
        - DataBaseClient dataBaseClient

        ' --- methods (github.weichware10.util.db.Strings) ---
        #  Strings(DataBaseClient dataBaseClient)
        + Integer sizeOf(String stringId)
        + List<String> get(String stringId)
        + void set(String stringId, List<String> strings)
    }

    class github.weichware10.util.db.Trials {
        ' --- values (github.weichware10.util.db.Trials) ---

        ' --- fields (github.weichware10.util.db.Trials) ---
        - DataBaseClient dataBaseClient

        ' --- methods (github.weichware10.util.db.Trials) ---
        #  Trials(DataBaseClient dataBaseClient)
        + String getConfigId(String trialId)
        + TrialData getTrial(String trialId)
        + boolean set(TrialData trialData)
        + boolean getAvailability(String trialId)
        + List<String> add(String configId, int amount)
        + List<TrialData> getList(String configId, ToolType toolType, DateTime minTime, DateTime maxTime, int amount)
    }

    class github.weichware10.util.db.Util {
        ' --- values (github.weichware10.util.db.Util) ---

        ' --- methods (github.weichware10.util.db.Util) ---
        {static}# String generateId(String prefix, int length)
        {static}# void closeQuietly(Connection conn)
        {static}# void closeQuietly(Statement st)
        {static}# void closeQuietly(PreparedStatement pst)
        {static}# void closeQuietly(ResultSet rs)
    }

}

' autogenerated field links, may be faulty.
github.weichware10.util.db.DataBaseClient o-l- github.weichware10.util.db.Configurations
github.weichware10.util.db.DataBaseClient o-u- github.weichware10.util.db.Trials
github.weichware10.util.db.DataBaseClient o-u- github.weichware10.util.db.Datapoints
github.weichware10.util.db.DataBaseClient o-r- github.weichware10.util.db.Strings
github.weichware10.util.db.DataBaseClient o-- github.weichware10.util.db.Permissions
github.weichware10.util.db.Permissions o-- github.weichware10.util.db.Permission

' autogenerated inheritances, may be faulty.

@enduml
